--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "start-dev": "nodemon app.js"
+    "start-dev": "nodemon app.js",
+    "format": "remark . --quiet --frail --output"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,13 @@
   "devDependencies": {
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "remark-cli": "^12.0.0",
+    "remark-lint-emphasis-marker": "^3.1.2",
+    "remark-lint-list-item-indent": "^3.1.2",
+    "remark-lint-strong-marker": "^3.1.2",
+    "remark-preset-lint-consistent": "^5.1.2",
+    "remark-preset-lint-recommended": "^6.1.3"
   },
   "dependencies": {
     "express": "^4.17.3"
